# medcbbackend

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  requirements.txt  vercel.json
agents/: agent_tools.py  graph_flow.py
api/: chat.py
app/: api.py
models/: chat_model.py  llama3-qlora.yml
models/test_models/: evaluation.ipynb  evaluation_results.csv
retrievals/: __init__.py  retriever.py
utils/: document_loader.py
